# python-template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: python-app.yml
app/: __init__.py  config.py  logger.py
tests/: test_main.py
